@@ -1,4 +1,6 @@
 ﻿Sigil v0.2.0 RC1 ADD_DATE
+    - the special iPad- and Calibre-friendly cover meta tag information is now preserved
+    after loading
     - added a new "Cover Image" entry for image resource in the "Add Semantics" Book Browser menu  
     - if an image is not set as a cover image manually, Sigil now uses heuristics on save
     to determine if the epub has a cover image
